--- a/contactinfo.css
+++ b/contactinfo.css
@@ -1,5 +1,3 @@
-
-
 .nav {
     width: 100%;
     background-color: blueviolet;
@@ -11,18 +9,60 @@
     display: inline-block;
 }
 
+
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: pink;
+    }
+  }
+
 h1 {
-text-align: center;
+    text-align: center;
 }
 
 .nav li {
     margin-top: 10px;
     display: inline-block;
     color: lightcyan;
-    margin-left: 37px; 
- }
+    margin-left: 37px;
+}
 
-.nav a:hover{
+.nav a:hover {
     font-style: normal;
     color: cornsilk;
 }
+
+.container col {
+    margin-left: 10px; 
+}
+
+.container {
+    margin-top: 100px;
+    margin-right: 20px;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.row {
+   border-radius: 15px;
+   margin-left: 10px;
+   background-color: lightpink;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 100%;
+}
+
+.row p {
+    align-items: center;
+}
+
+.personal:hover {
+background-color: darkgrey;
+}
+
+.row ul li img {
+    border-radius: 10px;
+    max-height: 40px;
+    max-width: 40px;
+}
+
