--- a/portfolio.css
+++ b/portfolio.css
@@ -3,8 +3,8 @@
     width: 100%;
     background-color: blueviolet;
     height: 50px;
-    color: plum;
-   text-align: center;
+    color:darkgray;
+    text-align: center;
     float: left;
     position: relative;
     display: inline-block;
@@ -18,9 +18,65 @@ text-align: center;
     margin-top: 10px;
     display: inline-block;
     margin-left: 37px; 
+    color: darkgrey;
  }
 
 .nav a:hover{
     font-style: normal;
     color: cornsilk;
 }
+
+
+
+  
+.wrapper {
+display: grid;
+ grid-gap: 20px;
+ position: relative;
+ top: 60px;
+ right: 1400px;
+ grid-template-columns: repeat(4, [col] 400px ) ;
+ grid-template-rows: repeat(2, [row] 300px auto  );
+ background-color: pink;
+     }
+ 
+     .box {
+         background-color: pink;
+         color: darkgrey;
+         border-radius: 5px;
+         padding: 20px;
+         font-size: 150%; 
+     }
+
+     .box:hover {
+         background-color: lightgray;
+        color: lightpink;
+     }
+ 
+     .a {
+         grid-column: col / span 2;
+         grid-row: row;
+         max-width: 500px;
+         max-height: 500px;
+     }
+ 
+     .b {
+         grid-column: col 3 / span 2;
+         grid-row: row;
+         max-width: 500px;
+         max-height: 500px;
+     }
+ 
+     .c {
+         grid-column: col / span 2;
+         grid-row: row 2;
+         max-width: 500px;
+         max-height: 500px;
+     }
+ 
+     .d {
+        grid-column: col 3 / span 2;
+        grid-row: row 2;
+        max-width: 500px;
+        max-height: 500px;
+    }
