--- a/portfolio.css
+++ b/portfolio.css
@@ -1,9 +1,8 @@
-
 .nav {
     width: 100%;
     background-color: blueviolet;
     height: 50px;
-    color:darkgray;
+    color: darkgray;
     text-align: center;
     float: left;
     position: relative;
@@ -11,72 +10,76 @@
 }
 
 h1 {
-text-align: center;
+    text-align: center;
 }
 
 .nav li {
     margin-top: 10px;
     display: inline-block;
-    margin-left: 37px; 
+    margin-left: 37px;
     color: darkgrey;
- }
+}
 
-.nav a:hover{
+.nav a:hover {
     font-style: normal;
     color: cornsilk;
 }
 
 
-
-  
 .wrapper {
-display: grid;
- grid-gap: 20px;
- position: relative;
- top: 60px;
- right: 1400px;
- grid-template-columns: repeat(4, [col] 400px ) ;
- grid-template-rows: repeat(2, [row] 300px auto  );
- background-color: pink;
-     }
- 
-     .box {
-         background-color: pink;
-         color: darkgrey;
-         border-radius: 5px;
-         padding: 20px;
-         font-size: 150%; 
-     }
+    display: grid;
+    grid-gap: 20px;
+    position: relative;
+    top: 60px;
+    right: 1400px;
+    grid-template-columns: repeat(4, [col] 400px);
+    grid-template-rows: repeat(2, [row] 300px auto);
+    background-color: pink;
+}
 
-     .box:hover {
-         background-color: lightgray;
-        color: lightpink;
-     }
- 
-     .a {
-         grid-column: col / span 2;
-         grid-row: row;
-         max-width: 500px;
-         max-height: 500px;
-     }
- 
-     .b {
-         grid-column: col 3 / span 2;
-         grid-row: row;
-         max-width: 500px;
-         max-height: 500px;
-     }
- 
-     .c {
-         grid-column: col / span 2;
-         grid-row: row 2;
-         max-width: 500px;
-         max-height: 500px;
-     }
- 
-     .d {
-        grid-column: col 3 / span 2;
-        grid-row: row 2;
-        max-width: 500px;
-        max-height: 500px;
-    }
+.box {
+    background-color: pink;
+    color: darkgrey;
+    border-radius: 5px;
+    padding: 20px;
+    font-size: 150%;
+}
+
+.box:hover {
+    background-color: lightgray;
+    color: lightpink;
+}
+
+.a {
+    grid-column: col / span 2;
+    grid-row: row;
+    max-width: 500px;
+    max-height: 500px;
+}
+
+.b {
+    grid-column: col 3 / span 2;
+    grid-row: row;
+    max-width: 500px;
+    max-height: 500px;
+}
+
+.c {
+    grid-column: col / span 2;
+    grid-row: row 2;
+    max-width: 500px;
+    max-height: 500px;
+}
+
+.d {
+    grid-column: col 3 / span 2;
+    grid-row: row 2;
+    max-width: 500px;
+    max-height: 500px;
+}
+
+@media (max-width: 600px) {
+    @media screen and (max-height: 450px) {
+        .box {
+            align-items: center;
+        }
